# libdrop

./: .gitignore  .gitlab-ci.yml  .rustfmt.toml  :memory:.json  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  MOOSE_RELEASE_TAG  README.md  RELEASE.md  changelog.md  go.mod  mypy.ini  run.py  rust-toolchain.toml  sqlx-data.json  storage.db  storage.db.json
.sqlx/: query-0a3f1122199c61c93d6df986cd7310cc6f1f7a0be9daff8efc645b57cb49f37a.json  query-19d6ed1a7bd1e330c02fc05a1e8151877496ec61c489c6a63742a39cb091689d.json  query-1f2ef7d9bd124f2aec37e98fc60614dd8f41a6ddd5114d2e86634d042769e247.json  query-2367f21a68f64e4da800aef7bb6e44e5233a70ec70ed04f49adec67a1908fd01.json  (+11 more)
bindings/: generate_bindings.py  (+1 more)
drop-storage/: .env  Cargo.toml  sqlx-data.json  testdb.sqlite3
drop-storage/.sqlx/: query-08f35fc8694464397b55400fe70950cc77dae0b76aa2df7dfa7b9caba34ad627.json  query-0e9fe357c546165f64fa3735eea1b6b251195b88d93528172fce178ffe26ae68.json  query-1524b369d7d32b7a2a70e4f12f54170b98b06a4a694d68c8813d11af5c4ca389.json  query-1e44a51b263b0f53cb71cd1a2f5c28abd27f83565f65515d4e24116af8943866.json  query-1f5fc475637a1f09cfd7190214e013972d607e0a3867c205f8a361d3e58ff3ca.json  query-2367f21a68f64e4da800aef7bb6e44e5233a70ec70ed04f49adec67a1908fd01.json  query-25ecdcdec3f4268b4050a12e6d6a2d7ff9b39a7a5e9f84135d1ef639abfc28d7.json  query-2abb0fc23b24a2229df9fc12212468cde1d952e8b5ceee0523bbf91b96e7daf2.json  query-2c786fc72760838a562afba6ff0be3e3164f905d2cbfb1ce4b6a08df4dff23c3.json  query-2ff0b969cd857ded2df9e44e91b57ff6ac4c7ef69fef5e35baaaf14a2edf672f.json  query-3dcbcbbdd64a27c1b1c6c015c752ae9ad7473a339a48455e6762d36fc4c83bf6.json  query-43e638f440d5af5f27d3df8361173d2e00febe9c1351b579ac202cb6ae13d086.json  query-4688b96928def1d6e17671b9989c5b69d3afc7a919d639df8ef5771757972cb3.json  query-56612e00c5f1019a00cd8e535b4a3fbc2fc01b2c2545acbec4869a5d11ffefe0.json  query-5ec61dee21ec948c3ed56b1da2a87a467d54d3688270f28d005035620973735a.json  query-5f2f63a955b91985ab0d4e20735f604d8ff75d4d3c0cc8768b2e4c393f3e8257.json  query-5f6e2267e59463782fc63d1d41a65dcf3cb2a689135fd999d9759efb4c19d237.json  query-61321311e3104882a9cbcfc80615486b02aeb8eae0666c795d9aec66880462cf.json  query-62accb483316855478d1a970ab88fb192130e9f77db410a3439b57cbf7f322d1.json  query-667f55a67e76285b38c5e2735af5a7598cff00f4a25062f5d9868c98caa77bd3.json  query-692e2720cb2ae23263326df119a7b9cada9f2f81eadd37521f00cfeed84d6eea.json  query-769a31600a0b28f07072b06c388e5a243b0b8c1a5a6ce00aa6ba09f1d22dc6c7.json  query-831da3e9f061d0e0573b5420d5b1bfade2d7e956b1b91113062bbc47c0257138.json  query-88628483e67f9b4ef8f20c13ac237d99d7b970e4d6e011543cd95005333d2bb2.json  query-8d84a46c78fbfc5bbf741b8e3c8ad425f3e7a4b62642740e22352ab5f532ed7c.json  query-917108c284b0346e344c2e64ae9be4fb690c6d68afc6fdd99dc3d55cd3b3bf88.json  query-923e36d9233ef91a95e1c14cf523a301e233f4c96e2521895bb2ba8ff16ce8f9.json  query-96166e1916c136a5b71d980cfa382b38163b30b0cae4f5ca49f057bddfe9cf29.json  query-98ab1819264f9a0c56ff65425cadaa71043c26874968a35118214df3477561f1.json  query-9a5dc2cc111c3377a27a0d6f128e5e1c13e00a4abd62120b1e503184af418caf.json  query-9dc4cd5cc2d95b8531b0f840e7319a3f976de8d9ab62f80881c6a5bf87c8123b.json  query-a4dbbe04b776adf8ac2d082d8cce99cb3b0c463b76c14dbcbe237a8dfda0c5d4.json  query-ae2fe7c2244f498a24dfa8900a5a455b696d56fa6c06b4b0fd00c64dc611a154.json  query-b71bfff9a9e4e78fbb37c86e4167cbbfdcc8fb01b75d1e5ce81ab2f8b24e68f7.json  query-b769b301331cb8c977f22acd9656206ece79c0bd4e7ad711ebb587ded9a9bca2.json  query-ba84f8888f82618ab986b1137cfd7bda7f4b8f36d8422834977c041d5096e782.json  query-bba13fd686fbf3b7fa433e4a4447879cebb0f9cd88bc95c61797b1fe37da4328.json  query-bbf32e78b440c5542cc45794a4b3d0a370809597e1d7024ec9a5a0bb9bf50a08.json  query-bc31cccedafbec0c00097e6f93b3854c89552f6ae8e6d9794fb90c483efa15aa.json  query-c189a03a1eb204e24e93a544b5579f3ddd16babd59e91dcf90965e106d8ba918.json  (+11 more)
drop-storage/migrations/: 20230406110818_initial_migration.sql
drop-storage/migrations/001-initial/: up.sql
drop-storage/migrations/002-rejections/: up.sql
drop-storage/migrations/003-retries/: up.sql
drop-storage/migrations/004-sync-cleanup/: up.sql
drop-storage/src/: error.rs  lib.rs  sync.rs  types.rs
drop-transfer/: Cargo.toml
drop-transfer/examples/: udrop.rs
drop-transfer/src/: auth.rs  check.rs  error.rs  event.rs  lib.rs  manager.rs  service.rs  storage_dispatch.rs  tasks.rs  transfer.rs  utils.rs
drop-transfer/src/file/: gather.rs  id.rs  mod.rs
drop-transfer/src/file/reader/: fd.rs  mod.rs  path.rs
drop-transfer/src/protocol/: mod.rs  v1.rs  v3.rs  v4.rs  v5.rs  v6.rs
drop-transfer/src/quarantine/: dummy.rs  macos.rs  mod.rs  windows.rs
drop-transfer/src/ws/: client.rs  events.rs  mod.rs  server.rs  utils.rs
drop-transfer/src/ws/client/: handler.rs  mod.rs  socket.rs  throttle.rs  v2.rs  v3.rs  v4.rs  v5.rs  v6.rs
drop-transfer/src/ws/server/: auth.rs  handler.rs  mod.rs  socket.rs  v2.rs  v3.rs  v4.rs  v5.rs  v6.rs
norddrop/: Cargo.toml  Makefile  build.rs  cbindgen.toml  suppress_source_fortification_check.c  uniffi.toml
norddrop/ffi/: norddrop.i  norddropcs.i  norddropgo.i  norddropjava.i
norddrop/ffi/bindings/: norddrop.h  norddrop_types.h
norddrop/ffi/bindings/android/java/com/nordsec/norddrop/: INordDropEventCb.java  INordDropLoggerCb.java  INordDropPubkeyCb.java  NordDrop.java  NorddropLogLevel.java  NorddropResult.java  SWIGTYPE_p_int64_t.java  libnorddropJNI.java
norddrop/ffi/bindings/android/wrap/: java_wrap.c
norddrop/ffi/bindings/linux/go/: norddropgo.go
norddrop/ffi/bindings/linux/wrap/: go_wrap.c  jni_helper.h
norddrop/ffi/bindings/windows/csharp/: NordDrop.cs
norddrop/ffi/bindings/windows/wrap/: csharp_wrap.c
norddrop/ffi/helpers/: cs_rename
norddrop/ffi/helpers/go/: wtf.h
norddrop/ffi/helpers/java/: INordDropEventCb.java  INordDropFdCb.java  INordDropLoggerCb.java  INordDropPubkeyCb.java
norddrop/src/: config.rs  device.rs  dump.rs  event.rs  lib.rs  log.rs  norddrop.udl  types.rs  uni.rs
norddrop/src/device/: error.rs  mod.rs  types.rs  utils.rs
norddrop/src/ffi/: mod.rs  types.rs  uni.rs  version.rs
(+46 files in other folders)
