[workspace]
resolver = "2"

members = [
    "drop-analytics",
    "drop-transfer",
    "drop-auth",
    "drop-config",
    "drop-storage",
    "drop-core",
    "norddrop",
]

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros"] }
slog = { version = "2.7.0", features = ["release_max_level_info", "max_level_trace"] }
serde = { version = "1.0.160", features = ["derive"] }
async-trait = "0.1.68"
base64 = "0.21.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
url = { version = "2.4.0", features = ["serde"] }
