[workspace]
resolver = "2"

members = [
    "drop-analytics",
    "drop-transfer",
    "drop-auth",
    "drop-config",
    "drop-storage",
    "drop-core",
    "norddrop", 
    "uniffi-bindgen",
]

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros"] }
slog = { version = "2.7.0", features = ["release_max_level_info", "max_level_trace"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
async-trait = "0.1.73"
base64 = "0.21.3"
uuid = { version = "1.4", features = ["v4", "serde"] }
url = { version = "2.4.1", features = ["serde"] }
strum = { version = "0.25.0", features = ["derive"] }
anyhow = "1.0.75"
libc = "0.2.147"
sha2 = "0.10.7"
thiserror = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip="debuginfo"
