[package]
name = "drop-transfer"
version = "1.0.0"
edition = "2021"
resolver = "2"

[[example]]
name = "udrop"

[dev-dependencies]
clap = { version = "=4.2", features = ["cargo"] }
tokio = { version = "1", features = ["signal"] }
slog-async = "2.8.0"
slog-scope = "4.4.0"
slog-term = "2.9"
tempfile = "3.8.0"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
drop-analytics = { version = "1.0.0", path = "../drop-analytics" }
drop-config = { version = "1.0.0", path = "../drop-config" }
drop-auth = { path = "../drop-auth" }
drop-core = { path = "../drop-core" }
drop-storage = { version = "1.0.0", path = "../drop-storage" }
futures = "0.3"
futures-util = "0.3"
hex = { version = "0.4.3", features = ["serde"] }
hyper = "0.14.27"
infer = "0.13.0"
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha-1 = "0.10"
sha2 = { workspace = true }
slog = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = "0.20.1"
tokio-util = "0.7.8"
uuid = { workspace = true }
warp = { version = "0.3.6", default-features = false, features = ["websocket"] }
walkdir = "2.3.3"
async_cell = "0.2.2"
governor = { version = "0.6.0", default-features = false, features = ["dashmap", "std"] }
once_cell = "1.18.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
    