[package]
name = "norddrop"
version = "0.1.0"
authors = ["Lukas Pukenis"]
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
uuid = { version = "1.2", features = ["serde", "v4"] }
libc = "0.2.99"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = { workspace = true }
tokio = { workspace = true }

drop-transfer = { version = "1.0", path = "../drop-transfer" }
drop-config = { version = "1.0", path = "../drop-config" }
drop-analytics = { version = "1.0", path = "../drop-analytics" }

[build-dependencies]
cc = "1.0.74"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["netioapi", "ntdef", "winerror", "ws2def"] }
