[package]
name = "norddrop"
version = "0.1.0"
authors = ["Lukas Pukenis"]
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
uniffi = { git = "https://github.com/NordSecurity/uniffi-rs", tag = "v0.3.1+v0.25.0" }

uuid = { workspace = true }
libc = { workspace = true }
slog = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }

drop-transfer = { version = "1.0", path = "../drop-transfer" }
drop-config = { version = "1.0", path = "../drop-config" }
drop-analytics = { version = "1.0", path = "../drop-analytics" }
drop-auth = { path = "../drop-auth" }
drop-core= { path = "../drop-core" }
drop-storage = { version = "1.0", path = "../drop-storage" }

[build-dependencies]
cc = "1.0.83"
winresource = "0.1.17"
uniffi = { git = "https://github.com/NordSecurity/uniffi-rs", tag = "v0.3.1+v0.25.0", features = ["build"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["netioapi", "ntdef", "winerror", "ws2def"] }


[package.metadata.winresource]
CompanyName = "Nord Security"
LegalCopyright = "Nord Security"
